syntax = "proto3";

package common;

option go_package = "gitlab.com/shanemaglangit/homagochi/backend/internal/protobuf";

message PageInfo {
  int32 count = 2;
  int64 startCursor = 3;
  int64 endCursor = 4;
  bool hasNextPage = 5;
  bool hasPrevPage = 6;
}